# chimera-examples

./: .gitignore  README.md  commands.txt  holdout_test.py  parameter_server.py  parse_chimera_times_file.py  pyproject.toml
chimera_workers/: sgd2.py
src/chimera_examples/ex_chimera_bagging_classification_rand_forest/: 1_workers_time.json  1_workers_time_ex_chimera_bagging_classification_rand_forest_master_http_localhost_8082_v1_chimera_aggregation_fit.txt  1_workers_time_ex_chimera_bagging_classification_rand_forest_worker_http_localhost_81_v1_chimera_model_fit.txt  2_workers_time.json  2_workers_time_ex_chimera_bagging_classification_rand_forest_master_http_localhost_8082_v1_chimera_aggregation_fit.txt  2_workers_time_ex_chimera_bagging_classification_rand_forest_worker_http_localhost_81_v1_chimera_model_fit.txt  2_workers_time_ex_chimera_bagging_classification_rand_forest_worker_http_localhost_82_v1_chimera_model_fit.txt  3_workers_time.json  3_workers_time_ex_chimera_bagging_classification_rand_forest_master_http_localhost_8082_v1_chimera_aggregation_fit.txt  3_workers_time_ex_chimera_bagging_classification_rand_forest_worker_http_localhost_81_v1_chimera_model_fit.txt  3_workers_time_ex_chimera_bagging_classification_rand_forest_worker_http_localhost_82_v1_chimera_model_fit.txt  3_workers_time_ex_chimera_bagging_classification_rand_forest_worker_http_localhost_83_v1_chimera_model_fit.txt  4_workers_time.json  4_workers_time_ex_chimera_bagging_classification_rand_forest_master_http_localhost_8082_v1_chimera_aggregation_fit.txt  (+4 more)
(+194 files in other folders)
