[tool.poetry]
name = "chimera-examples"
version = "0.1.0"
description = ""
authors = ["Samir Nunes da Silva"]
readme = "README.md"
packages = [{include="chimera_examples", from="src"}]

[tool.poetry.dependencies]
python = "^3.12.6"
chimera-distributed-ml = "^0.1.5"
kagglehub = "^0.3.10"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
